# qmux

./: Cargo.toml  LICENSE  README.md  install.sh
.github/: release-notes.md
.github/workflows/: release.yml
src/: config.rs  launcher.rs  lib.rs  main.rs  tmux.rs  update.rs
src/agent/: discover.rs  mod.rs  preset.rs  registry.rs
src/app/: actions.rs  event.rs  mod.rs  mode.rs  ui.rs
src/app/testdata/: claude.txt  codex.txt  copilot.txt  gemini.txt
tests/: tmux_integration.rs
